--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 	.text-white {
 		color: white;
 	}
+	.text-blue {
+		color: blue;
+	}
+	.carousel-inner > .item > img {
+    	margin: 0 auto;
+	}
+
 
 </style>
 
@@ -47,6 +54,7 @@
 
 <html lang="en">
 	<head>
+		<meta charset="utf-8"/>
 		<title>Grand Junction Tulsa</title>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -65,10 +73,6 @@
 		</nav>
 
 		<div class="containter-fluid">
-			<!-- <h3 class="text-center">Grand Junction Tulsa Custom Trucks</h3> -->
-			<!-- <img src="2015-Ford-150.jpg" class="img-responsive"> -->
-			<img id="main-pic" src="Ford.jpg" class="img-responsive">
-
             <h4 class="text-center text-white">Your home for truck accessories and parts.</h4>
             <h5></h5>
             <h5 class="text-center">We have been in business for over 35 years and have many repeat customers.</h5>
@@ -76,8 +80,35 @@
             <h5 class="text-center">Stop by or give us a call.</h5>
             <p class="text-center">
             <h5 class="text-center text-white">Hitches, 5th Wheels, Bumpers, Bedliners, Window Tinting, Push Bars, Winches</h5>
-<!-- 
-            <div class="push"></div> -->
+            <p></p>
+
+
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+				</ol>
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<img src="ford.jpg" alt="truck">
+					</div>
+					<div class="item">
+						<img src="toyota.jpg">
+					</div>
+					<div class="item">
+						<img src="nissan.jpg">
+					</div>
+					<div class="item">
+						<img src="chevy.jpg">
+					</div>					
+				</div>
+			</div>
+
+
+
+            <div class="push"></div>
 			<div class="footer text-center">
 			  <h6 class="text-black">(918) 245-6362  -  8100 Charles Page Blvd, Tulsa, OK 74127
 			  <a target="_blank" href="https://www.google.com/maps/place/Grand+Junction+Custom+Trucks/@36.14182,-96.082811,15z/data=!4m2!3m1!1s0x0:0xacdacc675f4cdc0f"> - Map Us</a></h6>
