--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</ol>
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="ford.jpg" alt="truck">
+						<img src="Ford.jpg" alt="truck">
 					</div>
 					<div class="item">
 						<img src="toyota.jpg">
