--- a/index.html
+++ b/index.html
@@ -98,13 +98,16 @@
 		  </div> 
 		</nav>
  -->
+ 				
  		<div class="well well-sm text-center well-padding text-blue background-transparent">
  			<h3>Grand Junction Tulsa Truck Accessories</h3>
  			<h4>Your home for truck accessories and parts for over 35 years.</h4>
  		</div>
 
 		<div class="containter-fluid">
+			
 			<div class="well well-sm text-center well-padding text-white background-transparent">
+				<img src="ford.jpg"> 
 	            <!-- <h4 class="text-center text-white">Your home for truck accessories and parts.</h4> -->
 	            <h5 class="text-center">We install what we sell and can even have your parts painted to match your truck.</h5>
 	            <h5 class="text-center">Stop by or give us a call.</h5>
