changed header bitmap

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div class="containter-fluid">
 			
 			<div class="well well-sm text-center well-padding text-white background-transparent">
-				<img src="ford.jpg"> 
+				<img src="f150.jpg"> 
 	            <!-- <h4 class="text-center text-white">Your home for truck accessories and parts.</h4> -->
 	            <h5 class="text-center">We install what we sell and can even have your parts painted to match your truck.</h5>
 	            <h5 class="text-center">Stop by or give us a call.</h5>
