modifications to carousel

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 
 	.background-transparent {
 		background-color: transparent;
+		border-color: gray;
+	}
+
+	.carouse .item.left img{
+		width: 100% !important;
 	}
 
 
@@ -86,6 +91,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body background="images/bo_play_pattern.png">
+
 <!-- 		<nav class="navbar navbar-default background-gray">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
@@ -99,15 +105,17 @@
 		</nav>
  -->
  				
- 		<div class="well well-sm text-center well-padding text-blue background-transparent">
- 			<h3>Grand Junction Tulsa Truck Accessories</h3>
+ 		<div class="well well-sm text-center well-padding text-white background-transparent">
+ 			<h3>Grand Junction Tulsa Custom Trucks</h3>
  			<h4>Your home for truck accessories and parts for over 35 years.</h4>
  		</div>
 
 		<div class="containter-fluid">
-			
 			<div class="well well-sm text-center well-padding text-white background-transparent">
-				<img src="f150.jpg"> 
+				<img src="f150.jpg" class="img-responsive">
+			</div>
+			<div class="well well-sm text-center well-padding text-white background-transparent">
+				
 	            <!-- <h4 class="text-center text-white">Your home for truck accessories and parts.</h4> -->
 	            <h5 class="text-center">We install what we sell and can even have your parts painted to match your truck.</h5>
 	            <h5 class="text-center">Stop by or give us a call.</h5>
@@ -128,33 +136,34 @@
 				</ol>
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="images/century.png">
+						<img src="images/century.png" class="img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/weathertech.jpg">
+						<img src="images/weathertech.jpg" "img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/rollnlock.jpg">
+						<img src="images/rollnlock.jpg" "img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/b&w.jpg">
+						<img src="images/b&w.jpg" "img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/drawtite.jpg">
+						<img src="images/drawtite.jpg" "img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/cattleman.png">
+						<img src="images/cattleman.png" "img-responsive"> 
 					</div>
 					<div class="item">
-						<img src="images/undercover.jpg">
+						<img src="images/undercover.jpg" "img-responsive">
 					</div>
 					<div class="item">
-						<img src="images/undercoverflex.jpg">
+						<img src="images/undercoverflex.jpg" "img-responsive">
 					</div>					
 				</div>
+			
 			</div>
 
-			<div id="myCarousel2" class="carousel slide" data-ride="carousel">
+<!-- 			<div id="myCarousel2" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
@@ -176,8 +185,7 @@
 					</div>
 
 				</div>
-			</div>
-
+			</div> -->
 
             <div class="push"></div>
 			<div class="footer text-center">
