--- a/index.html
+++ b/index.html
@@ -69,8 +69,18 @@
 		border-color: gray;
 	}
 
+	.background-black {
+		background-color: black;
+	}
+
 	.carouse .item.left img{
 		width: 100% !important;
+	}
+
+	.image-position {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 
@@ -105,14 +115,14 @@
 		</nav>
  -->
  				
- 		<div class="well well-sm text-center well-padding text-white background-transparent">
+ 		<div class="well well-sm text-center well-padding text-white background-black">
  			<h3>Grand Junction Tulsa Custom Trucks</h3>
  			<h4>Your home for truck accessories and parts for over 35 years.</h4>
  		</div>
 
 		<div class="containter-fluid">
 			<div class="well well-sm text-center well-padding text-white background-transparent">
-				<img src="f150.jpg" class="img-responsive">
+				<img src="f150.jpg" class="img-responsive image-position">
 			</div>
 			<div class="well well-sm text-center well-padding text-white background-transparent">
 				
