--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 	.background-black {
 		background-color: black;
 	}
-
-	.carouse .item.left img{
+/*
+	.carousel.item.left img{
 		width: 100% !important;
-	}
+	}*/
 
 	.image-position {
 		display: block;
