--- a/index.html
+++ b/index.html
@@ -9,76 +9,7 @@
 <!-- bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<style>
-
-	html, body {
-		height: 100%;
-	}
-
-	p {
-		color: white;
-		text-align: center;
-	}
-	a {
-		color: yellow;
-	}
-
-	.text-black {
-		color: black;
-	}
-	.text-white {
-		color: white;
-	}
-	.text-blue {
-		color: #0066ff;
-	}
-
-	.background-transparent {
-		background-color: transparent;
-	}
-	.background-black {
-		background-color: black;
-	}
-	.background-gray {
-		background-color: gray;
-	}
-
-
-	.footer, .push {
-		height: 100px;
-	}
-
-	.carousel-inner > .item > img {
-    	max-width: 100%;
-    	height: 50%;
-    	padding: 5%;
-	}
-	.carousel .item {
-		/*background-color: gray;*/
-		/*height: 50%;*/
-	}
-	.carousel-padding {
-		margin: : 5px 5px 5px 5px;
-	}
-
-	.well-padding {
-		margin: 5px 5px 5px 5px;
-		border-radius: 5px;
-	}
-	.well-border {
-		border-top: 25px;
-		border-color: #0066ff;
-	}
-
-	.image-position {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-
-
-</style>
+<link rel="stylesheet" href="styles.css">
 
 <script>
 	$(document).ready(function() {
@@ -89,6 +20,7 @@
 
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8"/>
 
 		<title>Grand Junction Tulsa</title>
@@ -105,6 +37,7 @@
  		</div>
 
 		<div class="containter-fluid">
+
 
 			<div class="well well-sm text-center well-padding text-white background-transparent">
 				<img src="images/chevy-header.jpg" class="img-responsive image-position">
