--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <!-- bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="styles.css">
-
+<linkackel="stylesheet" href="styles.css">-black-blue
 <script>
 	$(document).ready(function() {
 
@@ -24,8 +23,8 @@
 		<meta charset="utf-8"/>
 
 		<title>Grand Junction Tulsa</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon-black.ico" type="image/x-icon">
+		<link rel="icon" href="favicon-black.ico" type="image/x-icon">
 	</head>
 
 	<body background="images/bo_play_pattern.png">
