corrected some typos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <!-- bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<linkackel="stylesheet" href="styles.css">-black-blue
+<link rel="stylesheet" href="styles.css">
+
 <script>
 	$(document).ready(function() {
 
@@ -23,7 +24,8 @@
 		<meta charset="utf-8"/>
 
 		<title>Grand Junction Tulsa</title>
-		<link rel="shortcut icon" href="favicon-black.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon-blue.ico" type="ima
+		
 		<link rel="icon" href="favicon-black.ico" type="image/x-icon">
 	</head>
 
