corrected some more typos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<meta charset="utf-8"/>
 
 		<title>Grand Junction Tulsa</title>
-		<link rel="shortcut icon" href="favicon-blue.ico" type="ima
-		
+		<link rel="shortcut icon" href="favicon-black.ico" type="image">
+
 		<link rel="icon" href="favicon-black.ico" type="image/x-icon">
 	</head>
 
