made color changes

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 
  				
  		<div class="well well-sm text-center well-padding text-white background-black">
- 			<h3>Grand Junction Tulsa Custom Trucks</h3>
- 			<h4>Your home for truck accessories and parts for over 35 years.</h4>
+ 			<h2>Grand Junction Custom Trucks</h3>
+ 			<h4 class="text-orange">Your home for truck accessories and parts for over 35 years.</h4>
  		</div>
 
 		<div class="containter-fluid">
-
 
 			<div class="well well-sm text-center well-padding text-white background-transparent">
 				<img src="images/chevy-header.jpg" class="img-responsive image-position">
@@ -47,17 +46,17 @@
 			</div>
 
 			<div class="well well-sm text-center well-padding text-white background-black">
-	            <h5 class="text-center">We install what we sell and can even have your parts painted to match your truck.  We carry many brands and can custom order your parts to your exact choosing.</h5>
+	            <h5 class="text-center text-orange">We install what we sell and can even have your parts painted to match your truck.  We carry many brands and can custom order your parts to your exact choosing.</h5>
 	            
 	            <p></p>
-	            <h5 class="text-center text-white">Hitches, 5th Wheels, Bumpers, Bedliners, Window Tinting, Push Bars, Grill Guards, Caps, Toneau Covers, Winches</h5>
+	            <h5 class="text-center text-orange">Hitches, 5th Wheels, Bumpers, Bedliners, Window Tinting, Push Bars, Grill Guards, Caps, Toneau Covers, Winches</h5>
 	            <p></p>
-	            <h5 class="text-center">Stop by or give us a call.</h5>
+	            <h5 class="text-center text-orange">Stop by or give us a call.</h5>
 	        </div>
 
     	    <div class="footer text-center">
-			  <h6 class="text-white">(918) 245-6362  -  8100 Charles Page Blvd, Tulsa, OK 74127
-			  <a target="_blank" href="https://www.google.com/maps/place/Grand+Junction+Custom+Trucks/@36.14182,-96.082811,15z/data=!4m2!3m1!1s0x0:0xacdacc675f4cdc0f"> - Map Us</a></h6>
+			  <h6 class="text-white">(918) 245-6362  -  8100 Charles Page Blvd, Tulsa, OK 74127 - 
+			  <a target="_blank" href="https://www.google.com/maps/place/Grand+Junction+Custom+Trucks/@36.14182,-96.082811,15z/data=!4m2!3m1!1s0x0:0xacdacc675f4cdc0f"> Map Us</a></h6>
 			</div>
 
 			<div id="myCarousel" class="carousel slide background-transparent" data-ride="carousel">
