added google analytics tracking code and css adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
 <script>
 	$(document).ready(function() {
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+		ga('create', 'UA-49475106-1', 'auto');
+		ga('send', 'pageview');
 	})
 
 </script>
@@ -73,25 +79,25 @@
 
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="images/century.png">
+						<img src="images/century.png" border="0">
 					</div>
 					<div class="item">
-						<img src="images/weathertech.jpg">
+						<img src="images/weathertech.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/rollnlock.jpg">
+						<img src="images/rollnlock.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/b&w.jpg">
+						<img src="images/b&w.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/drawtite.jpg">
+						<img src="images/drawtite.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/cattleman.png"> 
+						<img src="images/cattleman.png" border="0"> 
 					</div>
 					<div class="item">
-						<img src="images/undercover.jpg">
+						<img src="images/undercover.jpg" border="0">
 					</div>
 					<div class="item">
 						<img src="images/undercoverflex.jpg">
