centered images in carousel and fixed carousel's top positioning

--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
 	            <p></p>
 	            <h5 class="text-center text-orange">Hitches, 5th Wheels, Bumpers, Bedliners, Window Tinting, Push Bars, Grill Guards, Caps, Toneau Covers, Winches</h5>
 	            <p></p>
-	            <h5 class="text-center text-orange">Stop by or give us a call.</h5>
+	            <h5 class="text-center text-orange">Stop by or give us a call.</h5> 
+
 	        </div>
 
-    	    <div class="footer text-center">
+    	    <div class="well well-sm text-center border-none background-transparent">
 			  <h6 class="text-white">(918) 245-6362  -  8100 Charles Page Blvd, Tulsa, OK 74127 - 
 			  <a target="_blank" href="https://www.google.com/maps/place/Grand+Junction+Custom+Trucks/@36.14182,-96.082811,15z/data=!4m2!3m1!1s0x0:0xacdacc675f4cdc0f"> Map Us</a></h6>
 			</div>
-
+			
 			<div id="myCarousel" class="carousel slide background-transparent" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
