--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <script>
 	$(document).ready(function() {
+
+		var imageNumber = Math.floor(Math.random() * 3 + 1)
+		
+
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -46,9 +50,9 @@
 		<div class="containter-fluid">
 
 			<div class="well well-sm text-center well-padding text-white background-transparent">
-				<img src="images/chevy-header.jpg" class="img-responsive image-position">
+				<!-- <img src="images/chevy-header.jpg" class="img-responsive image-position"> -->
 				<!-- <img src="images/ford-header.jpg" class="img-responsive image-position"> -->
-				<!-- <img src="images/f150-header.jpg" class="img-responsive image-position"> -->
+				<img src="images/f150-header.jpg" class="img-responsive image-position">
 			</div>
 
 			<div class="well well-sm text-center well-padding text-white background-black">
@@ -76,6 +80,7 @@
 					<li data-target="#myCarousel" data-slide-to="5"></li>
 					<li data-target="#myCarousel" data-slide-to="6"></li>
 					<li data-target="#myCarousel" data-slide-to="7"></li>
+					<li data-target="#myCarousel" data-slide-to="8"></li>
 				</ol>
 
 				<div class="carousel-inner" role="listbox">
@@ -102,7 +107,10 @@
 					</div>
 					<div class="item">
 						<img src="images/undercoverflex.jpg">
-					</div>					
+					</div>
+					<div class="item">
+						<img src="images/ranchhand.jpeg">
+					</div>
 				</div>
 			</div>
 		</div>
