--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 
 <script>
 	$(document).ready(function() {
+		var imageNumber = Math.floor(Math.random() * 3 + 1);
+		var imageArray = new Array();
+		imageArray[1] = "images/f150-header.jpg"
+		imageArray[2] = "images/ford-header.jpg"
+		imageArray[3] = "images/chevy-header.jpg"
+		document.getElementById("headerImage").setAttribute("src", imageArray[imageNumber]);
+		console.log(imageNumber - 1);
 
-		var imageNumber = Math.floor(Math.random() * 3 + 1)
-		
+
+	
 
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -52,7 +59,8 @@
 			<div class="well well-sm text-center well-padding text-white background-transparent">
 				<!-- <img src="images/chevy-header.jpg" class="img-responsive image-position"> -->
 				<!-- <img src="images/ford-header.jpg" class="img-responsive image-position"> -->
-				<img src="images/f150-header.jpg" class="img-responsive image-position">
+				<img id="headerImage" src="" class="img-responsive image-position fade-in" alt="image">
+				<!-- <img id="headerImage" src="images/f150-header.jpg" class="img-responsive image-position"> -->
 			</div>
 
 			<div class="well well-sm text-center well-padding text-white background-black">
