--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 					<li data-target="#myCarousel" data-slide-to="6"></li>
 					<li data-target="#myCarousel" data-slide-to="7"></li>
 					<li data-target="#myCarousel" data-slide-to="8"></li>
+					<li data-target="#myCarousel" data-slide-to="9"></li>
+					<li data-target="#myCarousel" data-slide-to="10"></li>
 				</ol>
 
 				<div class="carousel-inner" role="listbox">
@@ -118,6 +120,12 @@
 					</div>
 					<div class="item">
 						<img src="images/ranchhand.jpeg">
+					</div>
+					<div class="item">
+						<img src="images/bedslide.png">
+					</div>
+					<div class="item">
+						<img src="images/access_logo.png">
 					</div>
 				</div>
 			</div>
