added sales tax information to webpage

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 	            <h5 class="text-center text-orange">Hitches, 5th Wheels, Bumpers, Bedliners, Window Tinting, Push Bars, Grill Guards, Caps, Toneau Covers, Winches</h5>
 	            <p></p>
 	            <h5 class="text-center text-orange">Stop by or give us a call.</h5> 
+	            <p></p>
+	            <p></p>
+	            <h6 class="text-center text-white">In the city of Tulsa, sales tax is 8.517%.  We are not located within city limits so at our location, sales tax is 5.417% (state & county only).</h6> 
 
 	        </div>
 
