--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 
 <!-- JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- bootstrap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 
 <link rel="stylesheet" href="css/styles.css">
 
@@ -15,11 +15,11 @@
 	$(document).ready(function() {
 		var imageNumber = Math.floor(Math.random() * 3 + 1);
 		var imageArray = new Array();
-		imageArray[1] = "images/f150-header.jpg"
-		imageArray[2] = "images/ford-header.jpg"
-		imageArray[3] = "images/chevy-header.jpg"
+		imageArray[1] = "images/ford-f150-pickup.jpg"
+		imageArray[2] = "images/ford-f250-pickup.jpg"
+		imageArray[3] = "images/chevrolet-pickup.jpg"
 		document.getElementById("headerImage").setAttribute("src", imageArray[imageNumber]);
-		console.log(imageNumber - 1);
+		// console.log(imageNumber - 1);
 
 
 	
@@ -98,37 +98,38 @@
 
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="images/century.png" border="0">
+						<img src="images/century-truck-caps-tonneau.png" border="0">
 					</div>
 					<div class="item">
-						<img src="images/weathertech.jpg" border="0">
+						<img src="images/weather-tech-automotive-accessories.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/rollnlock.jpg" border="0">
+						<img src="images/roll-n-lock-truck-bed-covers.png" border="0">
 					</div>
 					<div class="item">
-						<img src="images/b&w.jpg" border="0">
+						<img src="images/b&w-trailer-hitches-turnoverball.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/drawtite.jpg" border="0">
+						<img src="images/draw-tite-hitches-mounts-ball-goosenecks.png" border="0">
 					</div>
 					<div class="item">
-						<img src="images/cattleman.png" border="0"> 
+						<img src="images/cattleman-heavy-duty-truck-accessories.png" border="0"> 
 					</div>
 					<div class="item">
-						<img src="images/undercover.jpg" border="0">
+						<img src="images/undercover-truck-bed-covers.gif" border="0">
 					</div>
 					<div class="item">
-						<img src="images/undercoverflex.jpg">
+						<!-- <img src="images/undercoverflex.jpg"> -->
+						<img src="images/undercover-flex-truck-bed-covers.jpg" border="0">
 					</div>
 					<div class="item">
-						<img src="images/ranchhand.jpeg">
+						<img src="images/ranch-hand-grille-guards-bumpers-steps.jpeg"  border="0">
 					</div>
 					<div class="item">
-						<img src="images/bedslide.png">
+						<img src="images/bedslide-truck-bed-sliding-drawer-system.jpg"  border="0">
 					</div>
 					<div class="item">
-						<img src="images/access_logo.png">
+						<img src="images/access-truck-bed-tonneau-covers.gif"  border="0">
 					</div>
 				</div>
 			</div>
