--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</div>
 					<div class="item">
 						<!-- <img src="images/undercoverflex.jpg"> -->
-						<img src="images/undercover-flex-truck-bed-covers.jpg" border="0">
+						<img src="images/undercover-flex-truck-bed-covers.png" border="0">
 					</div>
 					<div class="item">
 						<img src="images/ranch-hand-grille-guards-bumpers-steps.jpeg"  border="0">
