updated image alt description

--- a/index.html
+++ b/index.html
@@ -98,38 +98,38 @@
 
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="images/century-truck-caps-tonneau.png" border="0">
+						<img src="images/century-truck-caps-tonneau.png" alt="century truck caps tonneaus covers commercial"border="0">
 					</div>
 					<div class="item">
-						<img src="images/weather-tech-automotive-accessories.jpg" border="0">
+						<img src="images/weather-tech-automotive-accessories.jpg" alt="weathertech automotive accessories " border="0">
 					</div>
 					<div class="item">
-						<img src="images/roll-n-lock-truck-bed-covers.png" border="0">
+						<img src="images/roll-n-lock-truck-bed-covers.png" alt="roll n lock truck bed covers m-series a-series qwikfoot cargo manager" border="0">
 					</div>
 					<div class="item">
-						<img src="images/b&w-trailer-hitches-turnoverball.jpg" border="0">
+						<img src="images/b&w-trailer-hitches-turnoverball.jpg" alt="bw trailer hitches gooseneck fifth wheel bumper farm ranch equipment" border="0">
 					</div>
 					<div class="item">
-						<img src="images/draw-tite-hitches-mounts-ball-goosenecks.png" border="0">
+						<img src="images/draw-tite-hitches-mounts-ball-goosenecks.png" alt="draw-tite trailer hitches ball mount accessories brake controllers gooseneck electrical wiring couplers" border="0">
 					</div>
 					<div class="item">
-						<img src="images/cattleman-heavy-duty-truck-accessories.png" border="0"> 
+						<img src="images/cattleman-heavy-duty-truck-accessories.png" alt="cattleman heavy duty truck accessories grille guards front rear bumpers headache racks running boards fuel tanks" border="0"> 
 					</div>
 					<div class="item">
-						<img src="images/undercover-truck-bed-covers.gif" border="0">
+						<img src="images/undercover-truck-bed-covers.gif" alt="undercover truck bed covers ultra flex ridgelander classic se lux flex elite lx swingcase nighthawk" border="0">
 					</div>
 					<div class="item">
 						<!-- <img src="images/undercoverflex.jpg"> -->
-						<img src="images/undercover-flex-truck-bed-covers.png" border="0">
+						<img src="images/undercover-flex-truck-bed-covers.png" alt="undercover truck bed covers flex ultra saddlebag lighting " border="0">
 					</div>
 					<div class="item">
-						<img src="images/ranch-hand-grille-guards-bumpers-steps.jpeg"  border="0">
+						<img src="images/ranch-hand-grille-guards-bumpers-steps.jpeg" alt="ranch hand grille guards front back bumpers running steps"  border="0">
 					</div>
 					<div class="item">
-						<img src="images/bedslide-truck-bed-sliding-drawer-system.jpg"  border="0">
+						<img src="images/bedslide-truck-bed-sliding-drawer-system.jpg" alt="truck bedslide classic contractor heavy duty accessories"  border="0">
 					</div>
 					<div class="item">
-						<img src="images/access-truck-bed-tonneau-covers.gif"  border="0">
+						<img src="images/access-truck-bed-tonneau-covers.gif" alt="access truck bed roll up tonneau cover lomax ag tarps snowsport rockstar led lights"  border="0">
 					</div>
 				</div>
 			</div>
